--- a/docs/_includes/extra/head.html
+++ b/docs/_includes/extra/head.html
@@ -1,2 +1,3 @@
 <meta name="msvalidate.01" content="A3DDB6ED1D24F7C9B1E0D5252FEFB351" />
 <meta name="baidu-site-verification" content="code-IjZeMQYJ1m" />
+<meta name="google-site-verification" content="i841-3h0yv9G5a9bRZ_VU-h8z0OOXFWIVAaxrGzNSps" />
