--- a/docs/_includes/extra/head.html
+++ b/docs/_includes/extra/head.html
@@ -1,3 +1,4 @@
 <meta name="msvalidate.01" content="A3DDB6ED1D24F7C9B1E0D5252FEFB351" />
 <meta name="baidu-site-verification" content="code-IjZeMQYJ1m" />
 <meta name="google-site-verification" content="qd8NVn8Y2UXu-vt8OpV7JmGHTWyPuGoUWwgcVOwTLwg" />
+<meta name="keywords" content="iOS confuse, 4.3, AppStore 4.3, Other, 机审，下架，重新上架，马甲"/>
